Updating the geocode example to be a working example

--- a/_layouts/geocode-interaction-sub.html
+++ b/_layouts/geocode-interaction-sub.html
@@ -12,17 +12,17 @@
       {% capture tmp %}
       <a href="/" id="uraniumlogo" {% if page.home_selected %}class="selected"{% endif %}></a>
       <div class='menu_widget'>
-        <a href="/widget_list.html" {% if page.widget_selected %}class="selected"{% endif %}>Widgets</a>
+        <a href="/interaction_list.html" {% if page.interaction_selected %}class="selected"{% endif %}>Interactions</a>
         <ul>
-          <li><a href="/widgets/carousel.html">Carousel</a></li>
-          <li><a href="/widgets/input_clear.html">Input Clear</a></li>
-          <li><a href="/widgets/geocode.html">Geolocation</a></li>
-          <li><a href="/widgets/tabs.html">Tabs</a></li>
-          <li><a href="/widgets/toggler.html">Toggler</a></li>
-          <li><a href="/widgets/zoom.html">Zoom</a></li>
+          <li><a href="/interactions/carousel.html">Carousel</a></li>
+          <li><a href="/interactions/input_clear.html">Input Clear</a></li>
+          <li><a href="/interactions/geocode.html">Geolocation</a></li>
+          <li><a href="/interactions/tabs.html">Tabs</a></li>
+          <li><a href="/interactions/toggler.html">Toggler</a></li>
+          <li><a href="/interactions/zoom.html">Zoom</a></li>
         </ul>
       </div>
-      <a href="/" {% if page.home_selected %}class="selected"{% endif %}>TEST LINK</a>
+      <a href="/about.html" {% if page.about_selected %}class="selected"{% endif %}>About</a>
       {% endcapture %}
       {{ tmp | strip_newlines | remove: "  " }}
     </nav>
@@ -32,7 +32,7 @@
     
     <div class="wrapper">
       <p>
-      <a href="{{site.url}}../../widgets/geocode.html"> < Back to Geolocation Widget</a>
+      <a href="{{site.url}}../../interactions/geocode.html"> < Back to Geolocation Widget</a>
       </p>
     </div>
     
