--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,5 +3,5 @@
 <title>Uranium JS | {{ page.title }}</title>
 <link href="http://fonts.googleapis.com/css?family=Crete+Round:400italic|Open+Sans:300,300italic,400|Ultra|Yellowtail" rel="stylesheet" />
 <link href="/stylesheets/main.css" rel="stylesheet" />
-<script src="/src/jquery-1.9.1.js"></script>
+<script src="/src/jquery-1.9.1.min.js"></script>
 <script src="/src/jquery.uranium.js"></script>
