--- a/stylesheets/scss/_carousel.scss
+++ b/stylesheets/scss/_carousel.scss
@@ -1,10 +1,10 @@
 body {
-  [data-ur-carousel-component='view_container'] {
+  [data-ur-set='carousel'] {
     background: $color2 url('resources/largeshade.png') no-repeat left bottom;
     border: 1px solid black;
     overflow: hidden;
     position: relative;
-    height: 100px;
+    height: 120px;
   }
   [data-ur-infinite="enabled"] [data-ur-carousel-component="scroll_container"] {
     margin: auto;
@@ -16,13 +16,19 @@ body {
     width: 100px;
     height: 100px;
   }
+  [data-ur-carousel-component="button"], [data-ur-carousel-component="count"] {
+    color: $color1;
+  }
+  [data-ur-carousel-component="count"] {
+    margin-left: 5px;
+  }
   [data-ur-carousel-component="button"] {
     display: inline-block;
     &[data-ur-state="disabled"] {
       opacity: 0.3;
     }
   }
-  .test [data-ur-carousel-component="view_container"] {
+  .test [data-ur-set="carousel"] {
     width: 50%;
   }
   [data-ur-carousel-component="dots"] {
