--- a/stylesheets/scss/_geocode.scss
+++ b/stylesheets/scss/_geocode.scss
@@ -1,34 +1,17 @@
 body#geocode_page {
-  div {
-    &[data-ur-carousel-component='view_container'] {
-      height: 270px;
-      width: 100%;
-      overflow-x: hidden;
-      border: 1px solid black;
-      background-color: #99cc00; }
-    &[data-ur-carousel-component="scroll_container"] {
-      display: block;
-      > * {
-        display: inline-block;
-        float: left;
-        // This is important -- otherwise, the carousel can't calculate the accurate total width
-        //  background-color: #3CC;
-      } }
-    &[data-ur-carousel-component="button"] {
-      display: inline-block;
-      &[data-ur-state="disabled"] {
-        opacity: 0.3; } } }
-  // Non essential styling
   #giant {
     height: 1000px;
     background-color: #ff6600;
     border: 1px solid black;
     margin: 5px;
-    padding: 5px; }
+    padding: 5px; 
+  }
   div[name='Three'] img {
     width: 62px !important;
     // on iphone without the important, it doesn't work!!
-    height: 62px; } }
+    height: 62px; 
+  } 
+}
 
 body#geocode_text_inputs_page, body#geocode_button_page{
   button[value=clickMe]{
