--- a/stylesheets/scss/_toggler.scss
+++ b/stylesheets/scss/_toggler.scss
@@ -1,159 +1,84 @@
 body#toggler_page {
-  .example{
+  .example,
+  .wrapper {
     [data-ur-set="toggler"]{
-      background-color: transparent;
+      background-color: transparent; 
     }
   }
-  * {
-    &[data-ur-set="toggler"] {
+  [data-ur-set="toggler"] {
+    border: none;
+    background: silver;
+  }
+  [data-ur-toggler-component='button'] {
+    opacity: 0.5;
+    border-radius: 5px;
+    background-color: $color2;
+    opacity: 1;
+    padding: 5px;
+    width: 190px;
+    height: 30px;
+    margin: auto;
+    margin-top: 15px;
+    padding-top: 10px;
+    color: rgb(50, 50, 50);
+    font-size: 18px;
+    font-family: Rockwell;
+    text-align: center;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    border-radius: 5px;
+  }
+  [data-ur-toggler-component='content'] {
+    display: none;
+    background-color: $color2;
+    border-radius: 5px;
+    opacity: 1;
+    padding: 5px;
+    width: 190px;
+    margin: auto;
+    margin-top: 15px;
+    padding-top: 10px;
+    color: black;
+    font-size: 18px;
+    font-family: Rockwell;
+    text-align: center;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    border-radius: 5px;
+    li {
+      color: black;
+      text-align: left;
+      margin-left: 30px;
+      list-style-type: none;
+    }
+    li[data-ur-set="toggler"] {
+      ul[data-ur-toggler-component="content"] {
+        margin: 0;
+        padding: 0;
+      }
       border: none;
-      background: silver; }
-    &[data-ur-toggler-component='button'] {
-      background-color: $color2; }
-    &[data-ur-toggler-component='content'] {
-      display: none;
-      background-color: $color2; }
-    &[data-ur-toggler-component='button'][data-ur-state='enabled'] {
-      opacity: 1; }
-    &[data-ur-toggler-component='content'][data-ur-state='enabled'] {
-      display: block; } }
+      background: transparent;
+      [data-ur-toggler-component="button"] {
+        background: transparent;
+        padding-top: 0px;
+      }
+      [data-ur-toggler-component="content"][data-ur-state="enabled"] {
+        background: transparent;
+        width: 100px;
+      }
+    }
+  }
+  [data-ur-toggler-component='button'][data-ur-state='enabled'] {
+    opacity: 1;
+  }
+  [data-ur-toggler-component='content'][data-ur-state='enabled'] {
+    display: block;
+  }
   .components {
     [data-ur-toggler-component='button'] {
-      background: none; } }
-  // Popup examples
-  // Lazy styling
-  div[name='Dialog'] * {
-    &[data-ur-toggler-component='button'] {
-      border-radius: 5px;
-      background-color: $color2;
-      opacity: 1;
-      padding: 5px; }
-    &[data-ur-toggler-component='content'] {
-      display: none;
-      position: absolute;
-      border-radius: 5px;
-      background-color: #aaaaaa;
-      width: 500px;
-      height: 500px;
-      left: 200px;
-      bottom: 50px;
-      text-align: center;
-      padding-top: 30px;
-      &[data-ur-state='enabled'] {
-        display: block; } } }
-  // Proper Styling
-  .popup_button {
-    border-radius: 5px;
-    background-color: $color2;
-    opacity: 1;
-    padding: 5px;
-    display: inline;
-    margin: 0px 5px;
-    > span {
-      border-radius: 5px;
-      background-color: $color2;
-      opacity: 1;
-      padding: 5px;
-      display: inline;
-      margin: 0px 5px; } }
-  .popup_content {
-    position: absolute;
-    border-radius: 5px;
-    background-color: #aaaaaa;
-    //  width: 500px
-    // //height: 500px
-    left: 200px;
-    //  bottom: 50px
-    text-align: center;
-    padding: 30px;
-    &[data-ur-state='disabled'] {
-      display: none;
-      opacity: 0.5; }
-    &[data-ur-state='enabled'] {
-      display: inline-block;
-      opacity: 1;
-      img {
-        width: 200px;
-        height: 200px; } } }
-  // multiple example
-  [name='MultipleContents'] .buttons {
-    background-color: white;
-    opacity: 1;
-    // override lazy styling from above
-  }
-  .buttons {
-    &[data-ur-state="enabled"] span:last-child, &[data-ur-state="disabled"] span:first-child {
-      opacity: 0.5; } }
-  [name='MultipleContents'] {
-    .popup_content {
-      position: relative;
-      width: 250px;
-      height: 250px;
-      padding: 20px;
-      img {
-        width: 200px;
-        height: 200px; } }
-    [data-ur-toggler-component="content"] {
-      display: inline-block; } } }
-
-body#toggler_page {
-  .wrapper{
-    [data-ur-set='toggler']{
-      background-color: transparent;
+      background: none;
     }
   }
-  * {
-    &[data-ur-toggler-component='button'] {
-      opacity: 0.5;
-      border-radius: 5px;
-      background-color: $color2;
-      opacity: 1;
-      padding: 5px;
-      width: 190px;
-      height: 30px;
-      margin: auto;
-      margin-top: 15px;
-      padding-top: 10px;
-      color: rgb(50, 50, 50);
-      font-size: 18px;
-      font-family: Rockwell;
-      text-align: center;
-      -webkit-border-radius: 5px;
-      -moz-border-radius: 5px;
-      border-radius: 5px; }
-    &[data-ur-toggler-component='content'] {
-      display: none;
-      background-color: $color2;
-      border-radius: 5px;
-      opacity: 1;
-      padding: 5px;
-      width: 190px;
-      margin: auto;
-      margin-top: 15px;
-      padding-top: 10px;
-      color: black;
-      font-size: 18px;
-      font-family: Rockwell;
-      text-align: center;
-      -webkit-border-radius: 5px;
-      -moz-border-radius: 5px;
-      border-radius: 5px;
-      li {
-        color: black;
-        margin-left: 30px; }
-      li[data-ur-set="toggler"] {
-        border: none;
-        background: #fafafa;
-        [data-ur-toggler-component="button"] {
-          background: #fafafa;
-          padding-top: 0px; }
-        [data-ur-toggler-component="content"][data-ur-state="enabled"] {
-          background: #fafafa;
-          width: 100px; } } }
-    &[data-ur-toggler-component='button'][data-ur-state='enabled'] {
-      opacity: 1; }
-    &[data-ur-toggler-component='content'][data-ur-state='enabled'] {
-      display: block; } }
   // Popup examples
   // Lazy styling
   div[name='Dialog'] * {
@@ -173,7 +98,8 @@ body#toggler_page {
       text-align: center;
       -webkit-border-radius: 5px;
       -moz-border-radius: 5px;
-      border-radius: 5px; }
+      border-radius: 5px;
+    }
     &[data-ur-toggler-component='content'] {
       display: none;
       position: absolute;
@@ -186,7 +112,10 @@ body#toggler_page {
       text-align: center;
       padding-top: 30px;
       &[data-ur-state='enabled'] {
-        display: block; } } }
+        display: block;
+      }
+    }
+	}
   // Proper Styling
   .popup_button {
     border-radius: 5px;
@@ -201,7 +130,9 @@ body#toggler_page {
       opacity: 1;
       padding: 5px;
       display: inline;
-      margin: 0px 5px; } }
+      margin: 0px 5px;
+    }
+	}
   .popup_content {
     position: absolute;
     border-radius: 5px;
@@ -211,19 +142,28 @@ body#toggler_page {
     padding: 30px;
     &[data-ur-state='disabled'] {
       display: none;
-      opacity: 0.5; }
+      opacity: 0.5;
+    }
     &[data-ur-state='enabled'] {
       display: inline-block;
       opacity: 1;
       z-index: 10;
       img {
         width: 200px;
-        height: 200px; } } }
+        height: 200px;
+      }
+    }
+	}
   // multiple example
   [name='MultipleContents'] {
     .buttons {
+      background-color: white;
+      opacity: 1;
       &[data-ur-state="enabled"] span:last-child, &[data-ur-state="disabled"] span:first-child {
-        opacity: 0.5; } } }
+        opacity: 0.5;
+      }
+    }
+	}
   [name='MultipleContents'] {
     .popup_content {
       position: relative;
@@ -232,15 +172,45 @@ body#toggler_page {
       padding: 20px;
       [data-ur-toggler-component="content"][data-ur-state="disabled"] {
         img {
-          display: none; } }
+          display: none;
+        }
+      }
       [data-ur-toggler-component="content"][data-ur-state="enabled"] {
         img {
-          display: block; } }
+          display: block;
+        }
+      }
       img {
         width: 200px;
-        height: 200px; } } }
+        height: 200px;
+      }
+    }
+	}
   #disabled {
     background: #323232;
-    border: none; }
+    border: none;
+	}
   div[data-ur-id='MyToggler'].buttons {
-    background-color: $color2 !important; } }
+    background-color: $color2 !important;
+  }
+  .buttons {
+    &[data-ur-state="enabled"] span:last-child, &[data-ur-state="disabled"] span:first-child {
+      opacity: 0.5;
+    }
+  }
+  [name='MultipleContents'] {
+    .popup_content {
+      position: relative;
+      width: 250px;
+      height: 250px;
+      padding: 20px;
+      img {
+        width: 200px;
+        height: 200px;
+      }
+    }
+    [data-ur-toggler-component="content"] {
+      display: inline-block;
+    }
+  }
+}
