--- a/stylesheets/scss/_demonstration.scss
+++ b/stylesheets/scss/_demonstration.scss
@@ -38,7 +38,7 @@
       text-align: left; 
     } 
   }
-  #tab_widget *[data-ur-set="tabs"] * {
+  #tab_widget [data-ur-set="tabs"] * {
     &[data-ur-tabs-component="button"] {
       background: silver; 
     }
